added many slideshow and toh images; removed cloudinary references; updated payment index and tickets are now live

--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -15,13 +15,13 @@ block contents
 
         
         div
-            mixin slideImage('dance-blue-line_l68jcc')
+            mixin slideImageXL('/assets/img/slideshows/2017/dance-blue-line', 'Dancers at Festival')
         div
-            mixin slideImage('dance-chair_ycmlwo')
+            mixin slideImageXL('/assets/img/slideshows/2017/dance-chair', 'Dancers at Festival')
         div
-            mixin slideImage('dance-y')
+            mixin slideImageXL('/assets/img/slideshows/2017/dance-y', 'Dancers at Festival')
         div
-            mixin slideImage('dance-ballerinas_hpobmv')
+            mixin slideImageXL('/assets/img/slideshows/2017/dance-ballerinas', 'Ballerinas at Festival')
 
 
     article.u-container
