--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -60,7 +60,7 @@ block contents
                 p 
                     a(href="/art/2017/") Read the interview with local artist Mindy Phan.
             .ArrowNav
-                a(href="/events/tour-of-homes") >
+                a(href="/art/2017/") >
 
     ul.PromotionGrid.u-container.u-container--noPad
         li.PromotionItem.alt-primary
@@ -69,23 +69,23 @@ block contents
                 a.u-blockCentered.Button(href=globals.volunteerSite) Sign Up
 
 
-        li.PromotionItem
-            section
-                h3 Tour of Homes
-                p
-                    a(href="/events/tour-of-homes") Preview the homes on tour this year.
-            .ArrowNav
-                a(href="#") >
+        //- li.PromotionItem
+        //-     section
+        //-         h3 Tour of Homes
+        //-         p
+        //-             a(href="/events/tour-of-homes") Preview the homes on tour this year.
+        //-     .ArrowNav
+        //-         a(href="#") >
 
         //- Buy Tour Tickets Now
         //-
-        //- li.PromotionItem
-        //-     section
-        //-         h3 Tour of Homes Tickets For Sale!
-        //-         p
-        //-             a(href="/events/tour-of-homes") Buy discounted advance tickets on the Tour of Homes page
-        //-     .ArrowNav
-        //-         a(href="#") >
+        li.PromotionItem
+            section
+                h3 Tour of Homes Tickets For Sale!
+                p
+                    a(href="/events/tour-of-homes#buy-tickets") Buy discounted advance tickets on the Tour of Homes page
+            .ArrowNav
+                a(href="/events/tour-of-homes#buy-tickets") >
 
 
         li.PromotionItem.alt-secondary
