added solid-state band info; added dance content

--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -15,7 +15,7 @@ $link-hover-color-alt: rgb(34, 54, 181);
 $base-font-size: 16px;
 $base-font-color: $brand-grey-dark;
 $base-font-color-inverse: $brand-white;
-$base-font-family-sans-serif: 'Droid Sans Mono', serif;
+$base-font-family-sans-serif: 'Droid Sans Mono', sans-serif;
 $base-font-family-serif: 'Playfair Display', serif;
 
 // BREAKPOINTS
