--- a/src/html/events/dance/index.jade
+++ b/src/html/events/dance/index.jade
@@ -25,23 +25,31 @@ block contents
 
 
     article.u-container
-    
-        p This family-friendly performance of high artistic and technical quality includes Q &amp; A with the artists and a cool respite from the bustle of Festival's busy streets. The Inman Park Dance Festival is celebrating 16 years of presenting dance as a part of the Inman Park Festival and Tour of Homes. The Dance Festival's goal is to promote great dance in Atlanta and Georgia. It is the only free admission dance festival that presents both ballet and modern vocabulary in the State.
 
-        ul
-            li Atlanta Ballet Center Theatre
-            li Ballethnic
-            li Emory University Department of Movement Studies
-            li Full Radius Dance
-            li The Georgia Ballet
-
-        h3 The dance festival takes place on:
-        
-        p 
-            | Saturday, #{globals.ipf.date.saturday.date} and Sunday, #{globals.ipf.date.sunday.date}, #{globals.ipf.date.year} at 4:00 pm and is located at the Trolley Barn at 963 Edgewood Ave NE. 
+        p For the 16th year in-a-row, the Inman Park Festival and Tour of Homes presents a sampling of Atlanta's thriving and rich performing arts community during the Inman Park Dance Festival. 
+            
+        p
+            | There are two performances, <strong>Saturday, #{globals.ipf.date.saturday.date}</strong> and <strong>Sunday, #{globals.ipf.date.sunday.date}</strong>, in the Trolley Barn, 963 Edgewood Avenue at 4:00 pm 
             = ' '
             a(href="https://www.google.com/maps/place/THE+TROLLEY+BARN/@33.756329,-84.356141,17z/data=!3m1!4b1!4m2!3m1!1s0x88f503ff905e1bed:0xc1626dc0cd684569") [map it]
-            
+            = '. '
+            | These performances are the same, free, family-friendly and will last for about an hour.
+
+        p The performing companies for this year's Dance Festival are Atlanta Ballet Centre Theatre, Ballethnic, Emory University Movement Studies Program, Full Radius Dance, and Georgia Ballet. This group is high-quality and represents pre-professional though seasoned professional performers and the concert dance vocabularies of classical ballet and modern.
+
+        p In its 85th year, the Atlanta Ballet is the State ballet of Georgia. It's Center for Dance Education is one of the largest dance schools in the United States. It offers dance instruction starting at age two and has programs for all ages and levels. The dancers of the Atlanta Ballet Centre Theatre are a group of dedicated pre-professionals that are building skills for a career in professional dance. 2017 is the first year that the Atlanta Ballet is represented at the Dance Festival.
+
+        p Ballethinic brings it unique blending of classical ballet and African dance forms back to the Dance Festival. With high energy and technical prowess, the dancers of this company always provide an entertaining performance.
+
+        p The Emory Dance and Movement Studies Program represents the ever growing and improving college choices for young dancers in the State. Students majoring or minoring in contemporary modern dance at Emory invest in the creative process, somatic-based training, and critical thinking skills that help capture connections between the realm of the body and the world.
+
+        p Full Radius Dance, a professional, physically integrated (dancers with and without disabilities) modern dance company, is currently celebrating its 25th anniversary.  The company began its 'silver' season as the sole USA dance company presented at the KIADA Festival in Seoul, South Korea and will cap the season as the first USA company to perform at Una Mirada Diferente Festival in Madrid, Spain.  Full Radius Dance returns to the Inman Park Dance Festival for the 16th consecutive year.
+
+        p Founded in 1960 by Marietta native Iris Hensley, The Georgia Ballet is a non-profit organization committed to inspiring the public through professional ballet performance, unparalleled dance training and meaningful community outreach. In addition to the professional company performers represented at the dance festival this organization includes The School of the Georgia Ballet which serves both the recreational and the applied student for whom ballet performance is a career goal and Arts In Education which provides access to performance for Title I school children and children with physical and mental disabilities.
+
+        p Just like the neighborhood of Inman Park and the Inman Park Festival and Tour of Homes, this dance event is unique. It is one of only two dance festivals in the City that pay the performers instead of charging a fee to participate. And, it is the only dance festival that presents both ballet and modern dance. We invite you to put one of the Dance Festival performances on your schedule for this year's festival.
+
+
 
 block scripts
     script.
