--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -33,6 +33,7 @@ block contents
             mixin sponsorGridImage("/assets/img/2017/sponsors/silver/publix.png", "Publix", "http://publix.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/silver/north-american-properties.png", "North American Properties", "http://www.naproperties.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/silver/circus-camp.png", "Circus Camp", "http://www.circuscamp.org/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/silver/fontis.png", "Fontis Water", "https://www.fontiswater.com/")
 
 
         h2.SponsorsHeader.SponsorsHeader--bronze Bronze Sponsors
@@ -43,3 +44,7 @@ block contents
             mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/ecotools.png", "Ecotools", "https://ecotools.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/peachskinsheets.png", "PeachSkinSheets", "http://www.peachskinsheets.com")
             mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/renewal-andersen.png", "Renewal by Andersen", "http://www.rbaofatlanta.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/creative-loafing.png", "Creative Loafing", "http://www.clatl.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-united.png", "Atlanta United", "http://www.atlutd.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/edgewood-retail.png", "Edgewood Retail District", "http://shopedgewoodretaildistrict.com/")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/xfinity.png", "Xfinity", "https://www.xfinity.com")
