bradley cole smith photo; showing local locations for ticket sales

--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -59,17 +59,17 @@ block contents
                 img(alt='', border='0', src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif', width='1', height='1')
 
 
-        //- h2 Buying Tickets at Neighborhood Locations
+        h2 Buying Tickets at Neighborhood Locations
 
-        //- p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
+        p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
 
-        //- ul
-        //-     li Little Five Points Pharmacy (484 Moreland Avenue)
-        //-     li Nandina Home and Design (245 N. Highland Avenue)
-        //-     li Inman Dry Goods Boutique (743 Edgewood Avenue)
-        //-     li The Collection (723 Lake Avenue)
+        ul
+            li Little Five Points Pharmacy (484 Moreland Avenue)
+            li Nandina Home and Design (245 N. Highland Avenue)
+            li Inman Dry Goods Boutique (743 Edgewood Avenue)
+            li The Collection (723 Lake Avenue)
 
-        //- p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at these locations will increase to $20 and be available through the end of Festival.
+        p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at these locations will increase to $20 and be available through the end of Festival.
 
 
         h2 Important Details
