added bike locations and text to map page

--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -64,10 +64,10 @@ block contents
         p Tickets can also be purchased in-person at the following neighborhood locations. These locations accept only checks or cash for ticket purchases.
 
         ul
-            li Little Five Points Pharmacy (484 Moreland Avenue)
-            li Nandina Home and Design (245 N. Highland Avenue)
-            li Inman Dry Goods Boutique (743 Edgewood Avenue)
-            li The Collection (723 Lake Avenue)
+            li Little Five Points Pharmacy (<a href="https://goo.gl/maps/dPj7YMSc2zx">484 Moreland Avenue</a>)
+            li Nandina Home and Design (<a href="https://goo.gl/maps/4PRd7FtG4JL2">245 N. Highland Avenue</a>)
+            li Inman Dry Goods Boutique (<a href="https://goo.gl/maps/58ySWo6299P2">743 Edgewood Avenue</a>)
+            li The Collection (<a href="https://goo.gl/maps/ru6kfvxbbNx">723 Lake Avenue</a>)
 
         p Starting at noon on Friday #{globals.ipf.date.friday.date}, tickets at these locations will increase to $20 and be available through the end of Festival.
 
