--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -20,12 +20,17 @@ block contents
             li Drive to a Marta station near Inman Park (Edgewood/Candler Park, East Lake) and then take Marta just 1 or 2 stops to our station
             li Lyft/Uber/Taxi
 
-        //- h2 Bike
+        h2 Bike
 
-        //- p Free and secure valet bike parking will be provided by the Atlanta Bicycle Coalition in the alley off Delta Place near the Delta Park Stage and on the eastern side of the neighborhood at Euclid Avenue and Waverly Way.
+        p Free and secure valet bike parking will be provided by the Atlanta Bicycle Coalition in the following locations:
+
+        ul
+            li the intersection of Alta Avenue and Euclid Avenue
+            li the intersection of Waverly Way and Elizabeth Stree
+            li on Edgewood Avenue between Waddell and Krog Streets
         
-        h2 Festival Map with Free Shuttle Route and Bike Parking
-        
+        h2 Festival Map with Free Shuttle Route
+
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xhnIWgf6rrrt4iT7z5GT9iVP3hU" width="100%" height="400"></iframe>
 
         p
