added 2017 vendor info

--- a/src/html/booths/arts-crafts-market/index.jade
+++ b/src/html/booths/arts-crafts-market/index.jade
@@ -11,20 +11,20 @@ block contents
 
         h1 Arts & Crafts Market
         
-        p Our juried Arts and Crafts Show includes more than 150 fine artists working in sculpture, paintings, and photography.
+        p Our juried Arts and Crafts Show includes 129 fine artists working in a large variety of media.
 
-        p This year's Street Market vendors will be listed below as soon as they are chosen.
-
-        //- ul.Vendors
-        //-     each vendor in vendors.ac.lines
-        //-         li.Vendor
-        //-             ul.u-list-unstyled
-        //-                 li(class="Category--#{vendor.class}")
-        //-                     - var nameAsBusiness = vendor.business === '';
-        //-                     if nameAsBusiness
-        //-                         h3.Vendor-business #{vendor.firstname} #{vendor.lastname}
-        //-                     else
-        //-                         h3.Vendor-business= vendor.business
-        //-                         p.Vendor-name #{vendor.firstname} #{vendor.lastname}
-        //-                     a.Vendor-url(href="http://#{vendor.url}")= vendor.url
-        //-                     div.Vendor-category= vendor.category
+        ul.Vendors
+            each vendor in vendors.ac.lines
+                li.Vendor
+                    ul.u-list-unstyled
+                        li(class="Category--#{vendor.class}")
+                            - var nameAsBusiness = vendor.business === '';
+                            if nameAsBusiness
+                                h3.Vendor-business #{vendor.firstname} #{vendor.lastname}
+                            else
+                                h3.Vendor-business= vendor.business
+                                p.Vendor-name #{vendor.firstname} #{vendor.lastname}
+                            - var hasUrl = vendor.url !== ''
+                            if hasUrl
+                                a.Vendor-url(href="http://#{vendor.url}")= vendor.url
+                            div.Vendor-category= vendor.category
