--- a/src/assets/css/common/_vendor.scss
+++ b/src/assets/css/common/_vendor.scss
@@ -11,7 +11,7 @@
     > ul {
         list-style: none;
         margin: 0;
-        padding: 0;
+        padding: 0 0 0.25em;
         background: #eee;
 
         > li {
@@ -56,9 +56,28 @@
     // category colors
     //
 
+    .Category--antiques {
+        .Vendor-category {
+            background: rgb(183, 152, 93);
+        }
+    }
+
+    .Category--ceramics {
+        .Vendor-category {
+            background: rgb(244, 238, 66);
+        }
+    }
+
     .Category--clothing {
         .Vendor-category {
             background: rgba(191, 33, 35, 0.3);
+            // color: white;
+        }
+    }
+
+    .Category--consumables {
+        .Vendor-category {
+            background: rgb(255, 137, 58);
             // color: white;
         }
     }
@@ -112,7 +131,8 @@
         }
     }
 
-    .Category--metalcraft {
+    .Category--metalcraft,
+    .Category--metalwork {
         .Vendor-category {
             background: rgba(90, 90, 90, 0.3);
             // color: white;
@@ -132,6 +152,12 @@
         }
     }
 
+    .Category--pet-supplies {
+        .Vendor-category {
+            background: rgb(142, 111, 92);
+        }
+    }
+
     .Category--photography {
         .Vendor-category {
             background: rgba(0, 0, 0, 0.3);
@@ -145,10 +171,23 @@
         }
     }
 
-    .Category--woodcraft {
+    .Category--textile {
+        .Vendor-category {
+            background: rgb(88, 199, 239);
+        }
+    }
+
+    .Category--woodcraft,
+    .Category--woodwork {
         .Vendor-category {
             background: rgba(115, 82, 40, 0.3);
             // color: white;
+        }
+    }
+
+    .Category--various {
+        .Vendor-category {
+            background: rgb(196, 85, 204);
         }
     }
 
