--- a/src/html/map/index.jade
+++ b/src/html/map/index.jade
@@ -29,12 +29,12 @@ block contents
             li the intersection of Waverly Way and Elizabeth Stree
             li on Edgewood Avenue between Waddell and Krog Streets
         
-        h2 Festival Map with Free Shuttle Route
+        h2 Festival Map with Free Shuttle Route and Bike Parking
 
         <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1xhnIWgf6rrrt4iT7z5GT9iVP3hU" width="100%" height="400"></iframe>
 
         p
-            a(href="https://drive.google.com/open?id=1xhnIWgf6rrrt4iT7z5GT9iVP3hU&usp=sharing") View this map in your map application (or it's own browser window)
+            a(href="https://drive.google.com/open?id=1xhnIWgf6rrrt4iT7z5GT9iVP3hU&usp=sharing") View this full map (contains bus route, tour of homes, stages and other important locations)
         
         
         
