--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -48,3 +48,4 @@ block contents
             mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/atlanta-united.png", "Atlanta United", "http://www.atlutd.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/edgewood-retail.png", "Edgewood Retail District", "http://shopedgewoodretaildistrict.com/")
             mixin sponsorGridImage("/assets/img/2017/sponsors/bronze/xfinity.png", "Xfinity", "https://www.xfinity.com")
+            mixin sponsorGridImage("/assets/img/2017/sponsors/booth/aquaguard.png", "AquaGuard", "http://www.aquaguard.net")
