changed ToH prices to $20

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -83,7 +83,7 @@ block contents
             section
                 h3 Tour of Homes Tickets For Sale!
                 p
-                    a(href="/events/tour-of-homes#buy-tickets") Buy discounted advance tickets on the Tour of Homes page
+                    a(href="/events/tour-of-homes#buy-tickets") Buy tickets on the Tour of Homes page
             .ArrowNav
                 a(href="/events/tour-of-homes#buy-tickets") >
 
