--- a/src/html/events/tour-of-homes/index.jade
+++ b/src/html/events/tour-of-homes/index.jade
@@ -21,7 +21,7 @@ block contents
         h2 Tour of Homes Tickets
 
         //- p Tickets are $15 each and will be on sale shortly.
-        p Tickets are $15 each. Group tickets are available at 10 tickets for $120.
+        p Tickets are $20 each. Group tickets are available at 10 tickets for $120.
 
         p <strong>Important Note:</strong> When your transaction has been completed, a receipt for your purchase will be emailed to you. 
         
@@ -33,11 +33,19 @@ block contents
 
         .PaypalItems
             //- Tour of Homes Individual Tickets - Advance Purchase - $15/each
+            //- .PaypalItem
+            //-     span Tour of Homes Individual Tickets: $15 each
+            //-     form(target='paypal', action='https://www.paypal.com/cgi-bin/webscr', method='post')
+            //-         input(type='hidden', name='cmd', value='_s-xclick')
+            //-         input(type='hidden', name='hosted_button_id', value='RNBNA4ADCKUYU')
+            //-         input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif', border='0', name='submit', alt='PayPal - The safer, easier way to pay online!')
+            //-         img(alt='', border='0', src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif', width='1', height='1')
+
             .PaypalItem
-                span Tour of Homes Individual Tickets: $15 each
+                span Tour of Homes Individual Tickets: $20 each
                 form(target='paypal', action='https://www.paypal.com/cgi-bin/webscr', method='post')
                     input(type='hidden', name='cmd', value='_s-xclick')
-                    input(type='hidden', name='hosted_button_id', value='RNBNA4ADCKUYU')
+                    input(type='hidden', name='hosted_button_id', value='LT6HKKX2MUQNA')
                     input(type='image', src='https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif', border='0', name='submit', alt='PayPal - The safer, easier way to pay online!')
                     img(alt='', border='0', src='https://www.paypalobjects.com/en_US/i/scr/pixel.gif', width='1', height='1')
 
