updated booth pages for off-season with winners

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -21,6 +21,7 @@
 @import 'components/promotions';
 @import 'components/banners';
 @import 'components/paypal';
+@import 'components/booths';
 
 @import 'pages/sponsors';
 @import 'pages/faq';
