--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -81,12 +81,9 @@ block contents
         //-
         li.PromotionItem
             section
-                h3 Tour of Homes Tickets For Sale!
-                p
-                    a(href="/events/tour-of-homes#buy-tickets") Buy tickets on the Tour of Homes page
-            .ArrowNav
-                a(href="/events/tour-of-homes#buy-tickets") >
-
+                h3 Thanks for Joining Us!
+                
+                p And check back next year for details on Festival 2018.
 
         li.PromotionItem.alt-secondary
             section
