--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -5,6 +5,7 @@ $brand-yellow: rgb(254, 202, 56);
 $brand-green: rgb(159, 199, 90);
 $brand-grey: rgb(110, 110, 110);
 $brand-grey-dark: rgb(45, 45, 45);
+$brand-grey-light: rgb(180, 180, 180);
 
 $link-color: rgb(85, 132, 46);
 $link-hover-color: rgba($brand-green, 0.15);
