--- a/src/html/booths/become-an-exhibitor/index.jade
+++ b/src/html/booths/become-an-exhibitor/index.jade
@@ -11,7 +11,8 @@ block contents
     
         h1 Become an Exhibitor
 
-        p Exhibitor applications for this year's festival are now closed. Vendors will be notified of acceptance no later than #{globals.vendors.notification}.
+        p Exhibitor applications for this year's festival are now closed. 
+        // Vendors will be notified of acceptance no later than #{globals.vendors.notification}.
 
         //- p 
         //-     | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
@@ -28,13 +29,15 @@ block contents
         //- ul
         //-     li Application submissions must be postmarked by #{globals.vendors.deadline}
         //-     li Vendors will be notified of acceptance no later than #{globals.vendors.notification}
-            
-        h2 Exhibitor Information
-        
-        p Here are some helpful documents for exhibitors:
-        
-        ul
-            li
-                a(href="/assets/archive/2017/2017-Exhibitor-Checkin-Map.pdf") 2017 Map with Exhibitor Check-in Locations (PDF)
-            li
-                a(href="/assets/archive/2017/2017-Inman-Park-Stores-And-Hotels.pdf") List of Stores and Hotels in the Area (PDF)
+
+        p Vendor applications are closed in the off-season but you can check back on this site in the fall to find instructions on how to become a vendor. We use <a href="https://www.zapplication.org/" target="_blank">ZAPP</a> to manage vendor applications &ndash; feel free to visit their site to create an account at any time.
+
+        //- h2 Exhibitor Information
+        //- 
+        //- p Here are some helpful documents for exhibitors:
+        //- 
+        //- ul
+        //-     li
+        //-         a(href="/assets/archive/2017/2017-Exhibitor-Checkin-Map.pdf") 2017 Map with Exhibitor Check-in Locations (PDF)
+        //-     li
+        //-         a(href="/assets/archive/2017/2017-Inman-Park-Stores-And-Hotels.pdf") List of Stores and Hotels in the Area (PDF)
