--- a/src/html/booths/index.jade
+++ b/src/html/booths/index.jade
@@ -13,9 +13,54 @@ block contents
     article.u-container
 
         h1 Arts & Crafts Show and Street Vendors
-        
+
         p If you're looking for gifts, new clothes, art for your house or just about anything else, you are likely to find what you're looking for at one of the many vendor booths lining the tree-shaded streets during the Inman Park Festival.
-        
+
+        h2 2017 Arts &amp; Crafts Winners
+
+        .BoothWinners
+            .BoothWinner
+                h3 First Place
+                .BoothWinner-name Leif Johansen
+                .BoothWinner-type Shadow box drawings & paintings
+                .BoothWinner-url
+                    a(href="http://www.leiferikjohansen.com/" target="_blank") www.leiferikjohansen.com/
+                
+
+            .BoothWinner
+                h3 Second Place
+                .BoothWinner-name Linda Hill
+                .BoothWinner-type Paintings
+                .BoothWinner-url
+                    a(href="http://www.heartscapedesigns.com/" target="_blank") www.heartscapedesigns.com/
+                
+
+            .BoothWinner
+                h3 Third Place
+                .BoothWinner-name Natacha Monnalisa
+                .BoothWinner-type Wood burning drawings
+                .BoothWinner-url
+                    a(href="http://www.natachamonnalisa.com/" target="_blank") www.natachamonnalisa.com/
+                
+
+            .BoothWinner.BoothWinner--honorable
+                h3 Honorable Mentions
+                .BoothWinner-name Hannah Long
+                .BoothWinner-type Jewelry
+                .BoothWinner-url
+                    a(href="http://www.etsy.com/shop/hannahlongjewelry" target="_blank") www.etsy.com/shop/hannahlongjewelry
+
+                .BoothWinner-name Megan Smith
+                .BoothWinner-type Stuffed animals
+                .BoothWinner-url
+                    a(href="http://www.noblesmith.design" target="_blank") www.noblesmith.design
+
+                .BoothWinner-name Glenn Lewis
+                .BoothWinner-type Photography
+                .BoothWinner-url
+                    a(href="http://www.glennlewisphotography.com/" target="_blank") www.glennlewisphotography.com/
+
+
         h2 Booths
         
         p 
@@ -39,9 +84,11 @@ block contents
         
         p Together they comprise one of the largest street markets in the Southeast!
         
-        //- h2 Become a Vendor
+        h2 Become a Vendor
         
         //- p 
         //-     | If you are interested in being a vendor for the #{globals.ipf.date.year} festival, 
         //-     = ' '
         //-     a(href="/booths/become-an-exhibitor") visit the Become an Exhibitor page for more info.
+        
+        p Vendor applications are closed in the off-season but you can check back on this site in the fall to find instructions on how to become a vendor. We use <a href="https://www.zapplication.org/" target="_blank">ZAPP</a> to manage vendor applications &ndash; feel free to visit their site to create an account at any time.
