--- a/src/html/lost-and-found/index.jade
+++ b/src/html/lost-and-found/index.jade
@@ -17,7 +17,7 @@ block contents
         p
             | If you need to contact the festival staff for lost and found items, please send an email to Robbie Pierce at 
             = ' '
-            a(href="mailto:robbiepierce@robbiewhytekerner.com") robbiepierce@robbiewhytekerner.com.
+            a(href="mailto:robbie@whytekerner.com") robbie@whytekerner.com
 
         p Please don't forget to include a detailed description of the item you lost or found, where you lost or found it, and include a phone number where we can reach you.
 
