updates for vendor info, updated festival dates for this year

--- a/src/html/booths/become-an-exhibitor/index.jade
+++ b/src/html/booths/become-an-exhibitor/index.jade
@@ -11,18 +11,23 @@ block contents
     
         h1 Become an Exhibitor
 
-        p Exhibitor applications for this year's festival are now closed. 
-        // Vendors will be notified of acceptance no later than #{globals.vendors.notification}.
+        //- p Exhibitor applications for this year's festival are now closed. 
+        //- Vendors will be notified of acceptance no later than #{globals.vendors.notification}.
 
-        //- p 
-        //-     | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
-        //-     = " "
-        //-     a(href="https://www.zapplication.org/event-info.php?ID=5363") https://www.zapplication.org/event-info.php?ID=5363
+        p 
+            | To apply to become a vendor for the #{globals.ipf.date.year} #{globals.ipf.title}, please use this link:
+            = " "
+            a(href="https://www.zapplication.org/event-info.php?ID=6031") https://www.zapplication.org/event-info.php?ID=6031
         
-        //- p 
-        //-     | If you have questions, please email us at:
-        //-     = " "
-        //-     a(href="mailto:artinmanpark@gmail.com") artinmanpark@gmail.com
+        p 
+            | ZAPP is free for artists, and once you have created a profile, you can apply to other Festivals too. If you need additional help to get started, here is a link to instructions and a help video to apply to shows on ZAPP:
+            = " "
+            a(href="https://www.zapplication.org/help-center.php?page=how-to-apply") https://www.zapplication.org/help-center.php?page=how-to-apply
+
+        p 
+            | If you have questions, please email us at:
+            = " "
+            a(href="mailto:artinmanpark@gmail.com") artinmanpark@gmail.com
         
         //- h2 Deadlines for the #{globals.ipf.date.year} #{globals.ipf.title}:
         
@@ -30,7 +35,7 @@ block contents
         //-     li Application submissions must be postmarked by #{globals.vendors.deadline}
         //-     li Vendors will be notified of acceptance no later than #{globals.vendors.notification}
 
-        p Vendor applications are closed in the off-season but you can check back on this site in the fall to find instructions on how to become a vendor. We use <a href="https://www.zapplication.org/" target="_blank">ZAPP</a> to manage vendor applications &ndash; feel free to visit their site to create an account at any time.
+        //- p Vendor applications are closed in the off-season but you can check back on this site in the fall to find instructions on how to become a vendor. We use <a href="https://www.zapplication.org/" target="_blank">ZAPP</a> to manage vendor applications &ndash; feel free to visit their site to create an account at any time.
 
         //- h2 Exhibitor Information
         //- 
