--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -9,8 +9,8 @@ block title
 block contents
 
     div.Banner-dates
-        div Tour of Homes Preview: Friday April 28
-        div Festival: Saturday April 29 &amp; Sunday April 30
+        div Tour of Homes Preview: Friday #{globals.ipf.date.friday.date}
+        div Festival: Saturday #{globals.ipf.date.saturday.date} &amp; Sunday #{globals.ipf.date.sunday.date}
 
     .Hero.owl-carousel.owl-theme
         div
