--- a/src/html/sponsors/index.jade
+++ b/src/html/sponsors/index.jade
@@ -12,7 +12,7 @@ block contents
 
         h1 Festival Sponsors
         
-        p A big thanks to this year&rsquo;s festival sponsors:
+        p A big thanks to last year&rsquo;s festival sponsors:
 
     .SponsorsContainer
 
